--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gdcm (3.0.22-2deepin1) unstable; urgency=medium
+
+  * No source change upload against python 3.12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Mon, 08 Jul 2024 09:50:18 +0200
+
 gdcm (3.0.22-2) unstable; urgency=medium
 
   * d/patches: Revert changes breaking binary ABI. Closes: #1056953
